Feature: Added some animations when time's almost over (plus few fixes)

--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Autour+One&display=swap"
       rel="stylesheet"
@@ -24,6 +21,25 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Your best free trivia application on this side of the internet."
+    />
+    <meta name="keywords" content="trivia, quiz, free, entertainment" />
+    <meta name="author" content="Maxime, Mehdi, Pierre, Yassine" />
+
+    <meta property="og:title" content="Wild Trivia" />
+    <meta property="og:image" content="src/assets/user-icon.png" />
+    <meta
+      property="og:description"
+      content="Your best free trivia application on this side of the internet."
+    />
+    <link
+      rel="shortcut icon"
+      href="src/assets/user-icon.png"
+      type="image/png"
+    />
+
     <title>WildTrivia</title>
   </head>
   <body>
